SwitchCompat and Float Button Added.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,9 @@
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
+
+    <style name="SwitchCompatTheme">
+        <item name="colorAccent">@color/colorSwitch</item>
+    </style>
+
 </resources>
