--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,10 +38,21 @@
             android:layout_margin="16dp"
             android:text="@string/switch_compat"
             android:includeFontPadding="true"
-            android:theme="@style/SwitchCompatTheme"
             android:checked="true"
+            app:theme="@style/SwitchCompatTheme"
             app:switchPadding="8dp" />
 
+        <android.support.v7.widget.AppCompatCheckBox
+            android:id="@+id/checkBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/switchCompat"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:text="@string/check_box"
+            android:checked="true"
+            app:theme="@style/CheckBoxTheme"
+            />
 
 
 
