--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,4 +19,9 @@
         <item name="colorAccent">@color/colorSwitch</item>
     </style>
 
+    <style name="CheckBoxTheme">
+        <item name="colorAccent">@color/colorCheckBoxActive</item>
+        <item name="colorControlNormal">@android:color/black</item>
+    </style>
+
 </resources>
